# profit_decomposition

./: .gitignore  PCA.m  README.md  curveGeneration.m  excelToMat.m  getC.m  getCurve.m  getCurveNew.m  getW.m  visualizeZ.m
InterestRateCurves/: PreliminaryCurves.m  PreliminaryCurvesConstants.m  excelToMat.m  getC.m  getCurve 2.m  getCurve.m  getCurveNew.m  getCurveNewAttempt.m  getCurves.m  getDayData 2.m  getW 2.m  matrixGeneration.m  plotResults.m  test.m  test_small.m  visualizeZ.m
InterestRateCurves/120PriceDeviations/: AEDdev.mat  AUDdev.mat  BHDdev.mat  CADdev.mat  CHFdev.mat  CNYdev.mat  CZKdev.mat  DKKdev.mat  EURdev.mat  GBPdev.mat  HKDdev.mat  HUFdev.mat  IDRdev.mat  ILSdev.mat  INRdev.mat  ISKdev.mat  JPYdev.mat  KESdev.mat  KRWdev.mat  KWDdev.mat  MXNdev.mat  MYRdev.mat  NOKdev.mat  NZDdev.mat  PHPdev.mat  PKRdev.mat  PLNdev.mat  QARdev.mat  RONdev.mat  RUBdev.mat  SARdev.mat  SEKdev.mat  SGDdev.mat  THBdev.mat  TRYdev.mat  TWDdev.mat  UGXdev.mat  USDdev.mat  ZARdev.mat
InterestRateCurves/120daysCurves/: AED.mat  AUD.mat  BHD.mat  CAD.mat  CHF.mat  CNY.mat  CZK.mat  DKK.mat  EUR.mat  GBP.mat  HKD.mat  HUF.mat  IDR.mat  ILS.mat  INR.mat  ISK.mat  JPY.mat  KES.mat  KRW.mat  KWD.mat  MXN.mat  MYR.mat  NOK.mat  NZD.mat  PHP.mat  PKR.mat  PLN.mat  QAR.mat  (+11 more)
PAM/: PAM_timestep.m  TestCaseNewStructure.xlsx  Test_Case_Department_procurement_bom 2.xlsx  Test_Case_Department_procurement_bom.xlsx  Test_Case_Department_production_sales 2.xlsx  Test_Case_Department_production_sales 2_1.xlsx  Test_Case_Department_production_sales.xlsx  Test_Case_Realistic.xlsx  Test_Case_Realistic_v2 2.xlsx  Test_Case_Realistic_v2.xlsx  Test_Case_Realistic_v2_3.xlsx  Test_Case_Realistic_v2_4.xlsx  Test_sales_dept.xlsx  caseTest.xlsx  dataupdate.m  diagram_datastruct_PAM.drawio  excelToMatlab.m  getDmatrix 2.m  getDmatrix.m  get_PCA_data.m  initializeDatastructures.m  main.asv  main.m  mainPam.m  main_withdP.m  newSales 2.m  notes.txt  term6_results.m  testExcelToMatlab.m  testPAM.m
PCA/: PCA_test.xlsx  bootstrapping.m  create_curve.m  create_gradient.m  create_hessian.m  create_theoretical_price_xi_tilde.m  delta_barPrice_Function.m  forwardRates.xlsx  forwardRatesLS.mod  get_PCA_data.m  loadFromExcel.m  main_test.m  read_from_excel.m
PCA/amplapi/examples/cpp/: CMakeLists.txt  ampl_version.cmake  cxx11.cmake  dataframeexample.cc  locationtransportation.cc  multidimensionalexample.cc  optionsexample.cc
(+1358 files in other folders)
